# kapa-cortex

./: .gitignore  CLAUDE.md  README.md  kapa-cortex.py  kapa-stacker.py  lang_parsers.py  pyproject.toml  requirements.txt  stacked_pr_analyzer.py  test_analyzer.py
core/: Cargo.toml
core/src/: main.rs
core/src/application/: analyze.rs  indexer.rs  mod.rs
core/src/db/: mod.rs  queries.rs  schema.rs
core/src/domain/: entities.rs  mod.rs  services.rs
core/src/graph/: mod.rs
core/src/iface/: cli.rs  handler.rs  reporter.rs  server.rs
core/src/index/: mod.rs
docs/: plan-claude-code-skill-integration.md  session-summary.md
src/: __main__.py
src/application/: analyze_branch.py  execute_plan.py  extract_files.py  generate_plan.py
src/domain/: dependency_resolver.py  event.py  execution_plan.py  extraction_rule.py  file_grouper.py  file_matcher.py  import_ref.py  merge_order_resolver.py  merge_strategy.py  merge_strategy_assigner.py  pr_namer.py  prompt_parser.py  proposed_pr.py  risk_score.py  risk_scorer.py  step_status.py  symbol_def.py  test_pair.py  test_pair_finder.py
src/infrastructure/: setup.py
src/presentation/: cli.py
tests/domain/: test_changed_file.py  test_execution_plan.py  test_file_matcher.py  test_graph_queries.py  test_merge_strategy.py  test_pr_namer.py  test_prompt_parser.py  test_risk_policy.py  test_risk_scorer.py  test_symbol_ref.py  test_test_pair_finder.py
tests/infrastructure/: test_cached_complexity.py  test_cochange_adapter.py  test_difftastic_classifier.py  test_fuzzy_resolver.py  test_index_store.py  test_lsp_manager.py
(+85 files in other folders)
